# LocalSweep

./: LICENSE  README.md  package.json  pnpm-lock.yaml
docs/: PRD.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  cache_scan.rs  domain.rs  lib.rs  main.rs  process_scan.rs  settings_store.rs
src/components/: process-avatar.tsx
src/lib/: tauri-client.ts  types.ts  ui-store.ts
